# Vpet_web_cpp_react_hbase

./: .gitignore  README.md
backend-file/: CMakeLists.txt  main.cpp
pet_ques_backend/: CMakeLists.txt  hbase.hlang  main.cpp  myStart.sh
pet_ques_backend/controller/: DrinkController.cpp  DrinkController.h  FoodController.cpp  FoodController.h  MedicineController.cpp  MedicineController.h  OtherInteractionController.cpp  OtherInteractionController.h  PresentController.cpp  PresentController.h
pet_ques_backend/gen-cpp/: THBaseService.cpp  THBaseService.h  THBaseService_server.skeleton.cpp  hbase_types.cpp  hbase_types.h
pet_ques_backend/include/nlohmann/detail/output/: binary_writer.hpp
pet_ques_backend/model/basic/: MyPageRequest.cpp  MyPageRequest.h  MyPageResult.cpp  MyPageResult.h
pet_ques_backend/model/dto/drink/: DrinkAddRequest.cpp  DrinkAddRequest.h  DrinkPageRequest.cpp  DrinkPageRequest.h  DrinkUpdateRequest.cpp  DrinkUpdateRequest.h
pet_ques_backend/model/dto/food/: FoodAddRequest.cpp  FoodAddRequest.h  FoodUpdateRequest.cpp  FoodUpdateRequest.h
pet_ques_backend/model/dto/medicine/: MedicineAddRequest.cpp  MedicineAddRequest.h  MedicineUpdateRequest.cpp  MedicineUpdateRequest.h
pet_ques_backend/model/dto/present/: PresentAddRequest.cpp  PresentAddRequest.h  PresentUpdateRequest.cpp  PresentUpdateRequest.h
pet_ques_backend/model/entity/: Drink.cpp  Drink.h  Food.cpp  Food.h  Medicine.cpp  Medicine.h  Present.cpp  Present.h
pet_ques_backend/service/: DrinkService.cpp  DrinkService.h  FoodService.cpp  FoodService.h  MedicineService.cpp  MedicineService.h  PresentService.cpp  PresentService.h
pet_ques_backend/utils/: FileUtils.cpp  FileUtils.h  floatUtils.cpp  floatUtils.h  strUtils.cpp  strUtils.h
pet_ques_frontend/: .eslintrc.js  .gitignore  README.md  copyAssets.ts  imageNames.ts  package.json
pet_ques_frontend/config/: config.ts  defaultSettings.ts  oneapi.json  routes.ts
pet_ques_frontend/src/: app.tsx  requestErrorConfig.ts
pet_ques_frontend/src/assets/: imageList.ts
pet_ques_frontend/src/assets/shop/: drink.ts  food.ts  medicine.ts  present.ts
pet_ques_frontend/src/components/: test.ts
pet_ques_frontend/src/components/Entity/: petConstants.ts  petPageProperty.ts  petProperty.ts  petStateProperty.ts  routesConfig.ts
pet_ques_frontend/src/components/PetBehaviors/: petAnimationDebugs.ts  petAnimationHandlers.ts  petAnimationUtils.ts  petSpecialInteractionHandlers.ts
pet_ques_frontend/src/components/RightContent/: index.tsx
pet_ques_frontend/src/components/Utils/: utils.ts
pet_ques_frontend/src/pages/: Admin.tsx  Test.tsx
pet_ques_frontend/src/pages/Add/Drink/: index.tsx
pet_ques_frontend/src/pages/Add/Food/: index.tsx
pet_ques_frontend/src/pages/Add/Medicine/: index.tsx
pet_ques_frontend/src/pages/Add/Present/: index.tsx
pet_ques_frontend/src/pages/Pet/AnimeDebug/: index.tsx
pet_ques_frontend/src/pages/Pet/Display/: index.tsx
pet_ques_frontend/src/pages/Pet/SpecialInteraction/: index.tsx
pet_ques_frontend/src/pages/Table/Drink/: index.tsx
pet_ques_frontend/src/pages/Table/Food/: index.tsx
pet_ques_frontend/src/pages/Table/Medicine/: index.tsx
pet_ques_frontend/src/pages/Table/Present/: index.tsx
pet_ques_frontend/src/pages/TableList/: index.tsx
pet_ques_frontend/src/pages/Update/Drink/: index.tsx
pet_ques_frontend/src/pages/Update/Food/: index.tsx
pet_ques_frontend/src/pages/Update/Medicine/: index.tsx
pet_ques_frontend/src/services/ant-design-pro/: api.ts  typings.d.ts
pet_ques_frontend/src/services/pet_ques/: InteractionController.ts  drinkController.ts  foodController.ts  medicineController.ts  presentController.ts  typings.d.ts
pet_ques_frontend/types/: index.d.ts
pet_ques_frontend/types/cache/mock/: login.mock.cache.js
python_backend/: config.yml  main.py  static_main.py  test.py
python_backend/common/: BaseResponseModel.py  Constants.py  PageRequest.py  PageResult.py
python_backend/controller/: DrinkController.py  FoodController.py  MedicineController.py  OtherInteractionController.py  PresentController.py
python_backend/llm/: LlmChatTemplate.py
python_backend/model/dto/: DrinkRequest.py  FoodRequest.py  MedicineRequest.py  PresentRequest.py
python_backend/model/entity/: Drink.py  Food.py  LlmEntity.py  Medicine.py  Present.py
python_backend/service/: DrinkService.py  FoodService.py  LlmService.py  MedicineService.py  PresentService.py
python_backend/utils/: EncryptUtils.py  FileUtils.py  StrUtils.py
(+1 files in other folders)
